--- a/develop/blocks/main-nav/main-nav.scss
+++ b/develop/blocks/main-nav/main-nav.scss
@@ -85,6 +85,7 @@
             position: relative;
             margin-bottom: 0;
             margin-right: 15px;
+            flex: 0 0 auto;
 
             &:last-child {
                 margin-right: 0;
