--- a/develop/blocks/authorization/authorization.pug
+++ b/develop/blocks/authorization/authorization.pug
@@ -1,36 +1,37 @@
 mixin authorization()
+    -const loggedIn = true
     +b.authorization
         if !loggedIn
             +e.A.login(href='#') Вход
         else
             +e.logged
-                +e.BUTTON.toggle(title='admin@aktivo.ru') admin@aktivo.ru
-                +e.UL.list
-                    +e.LI.item
-                        +e.A.link(href='/realty') Недвижимость
-                            +e.SPAN.icon.--property
-                                img(src="../images/redesign/layout/property.svg", alt="")
-                    +e.LI.item
-                        +e.A.link(href='/account/questionary') Верификация
-                            +e.SPAN.icon.--questionary
-                                img(src="../images/redesign/layout/questionary.svg", alt="")
-                    +e.LI.item
-                        +e.A.link(href='/account/monitoring') Мониторинг
-                            +e.SPAN.icon.--monitoring
-                                img(src="../images/redesign/layout/monitoring.svg", alt="")
-                    +e.LI.item
-                        +e.A.link(href='/account/documents') Документы
-                            +e.SPAN.icon.--documents
-                                img(src="../images/redesign/layout/documents.svg", alt="")
-                    +e.LI.item
-                        +e.A.link(href='/account/finances') Финансы
-                            +e.SPAN.icon.--finances
-                                img(src="../images/redesign/layout/finances.svg", alt="")
-                    +e.LI.item
-                        +e.A.link(href='/account/settings') Настройки
-                            +e.SPAN.icon.--settings
-                                img(src="../images/redesign/layout/settings.svg", alt="")
-                    +e.LI.item
-                        +e.A.link(href='/logout') Выход
-                            +e.SPAN.icon
-                                img(src="../images/redesign/layout/logout.svg", alt="")
+                +e.A.account(title='admin@aktivo.ru') admin@aktivo.ru
+                //- +e.UL.list
+                //-     +e.LI.item
+                //-         +e.A.link(href='/realty') Недвижимость
+                //-             +e.SPAN.icon.--property
+                //-                 img(src="../images/redesign/layout/property.svg", alt="")
+                //-     +e.LI.item
+                //-         +e.A.link(href='/account/questionary') Верификация
+                //-             +e.SPAN.icon.--questionary
+                //-                 img(src="../images/redesign/layout/questionary.svg", alt="")
+                //-     +e.LI.item
+                //-         +e.A.link(href='/account/monitoring') Мониторинг
+                //-             +e.SPAN.icon.--monitoring
+                //-                 img(src="../images/redesign/layout/monitoring.svg", alt="")
+                //-     +e.LI.item
+                //-         +e.A.link(href='/account/documents') Документы
+                //-             +e.SPAN.icon.--documents
+                //-                 img(src="../images/redesign/layout/documents.svg", alt="")
+                //-     +e.LI.item
+                //-         +e.A.link(href='/account/finances') Финансы
+                //-             +e.SPAN.icon.--finances
+                //-                 img(src="../images/redesign/layout/finances.svg", alt="")
+                //-     +e.LI.item
+                //-         +e.A.link(href='/account/settings') Настройки
+                //-             +e.SPAN.icon.--settings
+                //-                 img(src="../images/redesign/layout/settings.svg", alt="")
+                //-     +e.LI.item
+                //-         +e.A.link(href='/logout') Выход
+                //-             +e.SPAN.icon
+                //-                 img(src="../images/redesign/layout/logout.svg", alt="")
