--- a/develop/blocks/authorization/authorization.scss
+++ b/develop/blocks/authorization/authorization.scss
@@ -33,104 +33,97 @@
             border-color: $theme-color;
         }
     }
-}
 
-.authorization__logged {
-    position: relative;
-    width: 180px;
-    top: 10px;
-}
+    &__logged {
+        position: relative;
+        width: 100px;
 
-.authorization__toggle {
-    position: relative;
-    width: 100%;
-    padding: 10px;
-    padding-right: 20px;
-    display: inline-block;
-    color: $text-color-white;
-    background: #4ec673;
-    text-align: left;
-    border-radius: 3px;
-    border: none;
+        &::after {
+            content: '';
+            position: absolute;
+            right: 0;
+            top: -8px;
+            width: 100%;
+            height: 9px;
 
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-
-    &::after {
-        content: '';
-        position: absolute;
-        width: 0;
-        height: 0;
-        top: 50%;
-        right: 10px;
-        transform: translateY(-50%);
-        border-top: 5px solid transparent;
-        border-bottom: 5px solid transparent;
-        border-left: 8px solid white;
-        transition: transform 300ms ease;
+            background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwIiBoZWlnaHQ9IjkiIHZpZXdCb3g9IjAgMCAxMDAgOSIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBkPSJNMSA4TDUwLjc0ODcgMUwxMDAgOCIgc3Ryb2tlPSIjZmVkNjNmIi8+PC9zdmc+);
+        }
     }
 
-    &.active::after {
-        transform: translateY(-50%) rotate(90deg);
-    }
-}
-
-.authorization__list {
-    display: none;
-    position: absolute;
-    z-index: 9;
-    width: 100%;
-    list-style: none;
-    margin: 0;
-    padding: 5px;
-
-    background-color: #4ec673;
-    // border-radius: 3px;
-    overflow: hidden;
-}
-
-.authorization__link {
-    position: relative;
-    display: block;
-    padding: 8px 12px 8px 45px;
-    font-size: 14px;
-    color: #fff;
-
-    text-decoration: none;
-
-    transition: background-color 300ms ease;
-
-    &:hover,
-    &:active,
-    &:focus {
-        color: #fff;
-        background-color: #6fde91;
-        text-decoration: none;
-    }
-}
-
-.authorization__icon {
-    position: absolute;
-    width: 18px;
-    height: 18px;
-    left: 10px;
-    top: 7px;
-
-    svg {
-        position: absolute;
+    &__account {
+        position: relative;
         width: 100%;
-        max-width: 100%;
-        height: auto;
-        max-height: 100%;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        padding: 3px 5px;
+        display: block;
 
-        fill: #fff;
-    }
+        color: $text-color-white;
+        font-size: 13px;
 
-    img {
-        @include img;
+        border: 1px solid $theme-color;
+        border-top-width: 0;
+
+        text-overflow: ellipsis;
+        overflow: hidden;
+
+        white-space: nowrap;
     }
 }
+
+// .authorization__list {
+//     display: none;
+//     position: absolute;
+//     z-index: 9;
+//     width: 100%;
+//     list-style: none;
+//     margin: 0;
+//     padding: 5px;
+
+//     background-color: #4ec673;
+//     // border-radius: 3px;
+//     overflow: hidden;
+// }
+
+// .authorization__link {
+//     position: relative;
+//     display: block;
+//     padding: 8px 12px 8px 45px;
+//     font-size: 14px;
+//     color: #fff;
+
+//     text-decoration: none;
+
+//     transition: background-color 300ms ease;
+
+//     &:hover,
+//     &:active,
+//     &:focus {
+//         color: #fff;
+//         background-color: #6fde91;
+//         text-decoration: none;
+//     }
+// }
+
+// .authorization__icon {
+//     position: absolute;
+//     width: 18px;
+//     height: 18px;
+//     left: 10px;
+//     top: 7px;
+
+//     svg {
+//         position: absolute;
+//         width: 100%;
+//         max-width: 100%;
+//         height: auto;
+//         max-height: 100%;
+//         top: 50%;
+//         left: 50%;
+//         transform: translate(-50%, -50%);
+
+//         fill: #fff;
+//     }
+
+//     img {
+//         @include img;
+//     }
+// }
