--- a/develop/blocks/main-header/main-header.pug
+++ b/develop/blocks/main-header/main-header.pug
@@ -1,7 +1,7 @@
 mixin main-header()
     +b.HEADER.main-header
         +e.inner
-            +e.A.logo(href='../')
+            +e.A.logo(href='./')
                 if (theme === 'dark')
                     img(src='images/redesign/logo-white.svg' width='88' alt='Aktivo')
                 else
