--- a/develop/jade/index.pug
+++ b/develop/jade/index.pug
@@ -3,6 +3,7 @@ include template/footer
 include ../blocks/**/*
 - const alias = "m"
 - const theme = 'dark'
+- const loggedIn = true
 doctype html
 html(lang='ru')
     +doc-header
