--- a/develop/blocks/authorization/authorization.scss
+++ b/develop/blocks/authorization/authorization.scss
@@ -56,7 +56,7 @@
         padding: 3px 5px;
         display: block;
 
-        color: $text-color-white;
+        color: var(--theme-text-color);
         font-size: 13px;
 
         border: 1px solid $theme-color;
