--- a/develop/blocks/index-bottom/index-bottom.scss
+++ b/develop/blocks/index-bottom/index-bottom.scss
@@ -1,6 +1,8 @@
 .index-bottom {
     margin-top: 205px;
     padding-bottom: 65px;
+
+    background-color: #1b1b1b;
     background-image: url(../images/redesign/index-bottom/bg.jpg);
     background-size: cover;
 
