--- a/develop/blocks/title/title.scss
+++ b/develop/blocks/title/title.scss
@@ -9,11 +9,11 @@
     font-weight: 600;
     line-height: 1.2;
 
-    &--main {
+    &.main {
         font-size: 32px;
     }
 
-    &--small {
+    &.small {
         font-size: 20px;
     }
 
