--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2224,6 +2224,437 @@ th {
       -ms-transform: translateY(-3px) rotate(-45deg);
           transform: translateY(-3px) rotate(-45deg); }
 
+.howitworks-aktivo {
+  position: relative;
+  padding-top: 140px;
+  padding-bottom: 200px;
+  overflow: hidden; }
+  .howitworks-aktivo::before {
+    content: 'A';
+    position: absolute;
+    top: -95px;
+    left: -250px;
+    color: transparent;
+    font-size: 700px;
+    font-weight: 600;
+    -webkit-text-stroke: 0.7px #fed63f; }
+  .howitworks-aktivo__title {
+    margin-bottom: 26px; }
+  .howitworks-aktivo__subtitle {
+    margin-bottom: 16px; }
+  .howitworks-aktivo__text {
+    font-size: 14px;
+    line-height: 1.6; }
+    .howitworks-aktivo__text--first {
+      margin-bottom: 35px; }
+    .howitworks-aktivo__text p {
+      margin: 0 0 10px; }
+      .howitworks-aktivo__text p:last-child {
+        margin-bottom: 0; }
+
+@media (min-width: 768px) {
+  .howitworks-aktivo {
+    padding-top: 120px;
+    padding-bottom: 250px; }
+    .howitworks-aktivo__wrapper {
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: flex; }
+    .howitworks-aktivo__title {
+      width: 33.3%;
+      -webkit-box-flex: 1;
+         -moz-box-flex: 1;
+          -ms-flex: 1 1 auto;
+              flex: 1 1 auto; }
+    .howitworks-aktivo__content {
+      width: 66.6%;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: -webkit-min-content auto;
+      grid-template-rows: min-content auto; }
+    .howitworks-aktivo__column {
+      width: 50%; }
+    .howitworks-aktivo__subtitle {
+      margin-bottom: 50px;
+      grid-column: 1;
+      grid-row: 1;
+      align-self: end; }
+      .howitworks-aktivo__subtitle--second {
+        grid-column: 2;
+        grid-row: 1; }
+    .howitworks-aktivo__text {
+      padding-right: 10px; } }
+
+@media (min-width: 1024px) {
+  .howitworks-aktivo::before {
+    top: -225px;
+    left: -282px;
+    font-size: 850px; }
+  .howitworks-aktivo__text {
+    font-size: 16px;
+    line-height: 1.4; } }
+
+@media (min-width: 1200px) {
+  .howitworks-aktivo {
+    max-width: 1440px;
+    margin: 0 auto;
+    overflow: visible;
+    padding-top: 120px;
+    padding-bottom: 270px; }
+    .howitworks-aktivo::before {
+      top: -255px;
+      left: -214px;
+      font-size: 950px; }
+    .howitworks-aktivo__title {
+      width: 400px;
+      -webkit-box-flex: 0;
+         -moz-box-flex: 0;
+          -ms-flex: 0 0 auto;
+              flex: 0 0 auto; }
+    .howitworks-aktivo__content {
+      width: 760px;
+      -webkit-box-flex: 0;
+         -moz-box-flex: 0;
+          -ms-flex: 0 0 auto;
+              flex: 0 0 auto;
+      grid-template-columns: 360px 400px; }
+    .howitworks-aktivo__text {
+      padding-right: 75px; } }
+
+.howitworks-investors {
+  padding-top: 65px;
+  overflow: hidden; }
+  .howitworks-investors__title {
+    margin-bottom: 5px; }
+  .howitworks-investors__subtitle {
+    display: none; }
+  .howitworks-investors__letters {
+    margin-bottom: 30px;
+    margin-left: -10px;
+    color: transparent;
+    font-size: 110px;
+    font-weight: 600;
+    line-height: 0.85;
+    -webkit-text-stroke: 0.7px #fed63f; }
+  .howitworks-investors__advantages {
+    max-width: 360px;
+    padding-right: 30px; }
+  .howitworks-investors__advantage {
+    margin-bottom: 40px; }
+    .howitworks-investors__advantage:last-child {
+      margin-bottom: 0; }
+  .howitworks-investors__advantage-title {
+    margin: 0 0 12px;
+    font-size: 20px;
+    font-weight: 600; }
+  .howitworks-investors__advantage-text {
+    margin: 0;
+    font-size: 14px;
+    line-height: 1.6; }
+
+@media (min-width: 768px) {
+  .howitworks-investors {
+    padding-top: 100px; }
+    .howitworks-investors__wrapper {
+      display: grid;
+      grid-template-areas: 'subtitle advantages title' '. advantages letters';
+      grid-template-columns: repeat(3, 33.3%);
+      grid-template-rows: 50px auto; }
+    .howitworks-investors__title {
+      grid-area: title; }
+    .howitworks-investors__subtitle {
+      display: block; }
+    .howitworks-investors__advantages {
+      grid-area: advantages; }
+    .howitworks-investors__advantage {
+      margin-bottom: 20px; }
+    .howitworks-investors__letters {
+      grid-area: letters;
+      margin-bottom: 0; } }
+
+@media (min-width: 1024px) {
+  .howitworks-investors__wrapper {
+    grid-template-rows: 70px auto; } }
+
+@media (min-width: 1200px) {
+  .howitworks-investors__wrapper {
+    grid-template-columns: 400px 360px 400px; }
+  .howitworks-investors__advantages {
+    padding-right: 60px; }
+  .howitworks-investors__advantage {
+    margin-bottom: 40px; }
+  .howitworks-investors__letters {
+    margin-left: -13px;
+    font-size: 128px; } }
+
+.howitworks-objects {
+  padding-top: 40px;
+  padding-bottom: 90px;
+  background-color: #1b1b1b;
+  background-image: url(../images/redesign/index-bottom/bg.jpg);
+  background-size: cover; }
+  .howitworks-objects__wrapper {
+    position: relative; }
+    .howitworks-objects__wrapper::before {
+      content: 'О';
+      position: absolute;
+      top: -45%;
+      left: 50%;
+      -webkit-transform: translateX(-50%);
+         -moz-transform: translateX(-50%);
+          -ms-transform: translateX(-50%);
+              transform: translateX(-50%);
+      color: transparent;
+      font-size: 360px;
+      font-weight: 600;
+      -webkit-text-stroke: 0.7px #fed63f; }
+  .howitworks-objects__title {
+    margin-bottom: 20px; }
+  .howitworks-objects__subtitle {
+    margin-bottom: 15px; }
+  .howitworks-objects__text {
+    margin: 0 0 45px;
+    color: #fff;
+    font-size: 14px;
+    line-height: 1.6; }
+  .howitworks-objects__link {
+    width: 100%;
+    max-width: 290px;
+    margin-bottom: 60px; }
+  .howitworks-objects__utp .value {
+    display: block;
+    margin-bottom: 25px;
+    color: transparent;
+    font-size: 180px;
+    font-weight: 600;
+    line-height: 125px;
+    -webkit-text-stroke: 0.7px #fed63f; }
+  .howitworks-objects__utp .label {
+    display: block;
+    color: #fff;
+    font-size: 14px;
+    line-height: 1.6; }
+
+@media (min-width: 768px) {
+  .howitworks-objects__wrapper {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .howitworks-objects__wrapper::before {
+      z-index: -1;
+      top: -290px;
+      right: -15px;
+      left: auto;
+      -webkit-transform: none;
+         -moz-transform: none;
+          -ms-transform: none;
+              transform: none;
+      font-size: 400px; }
+  .howitworks-objects__title {
+    width: 33.3%;
+    -webkit-box-flex: 1;
+       -moz-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+    margin-bottom: 25px; }
+  .howitworks-objects__content {
+    width: 66.6%;
+    -webkit-box-flex: 1;
+       -moz-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .howitworks-objects__column {
+    width: 50%;
+    -webkit-box-flex: 1;
+       -moz-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto; }
+  .howitworks-objects__text {
+    padding-right: 16px;
+    margin-bottom: 25px; }
+  .howitworks-objects__link {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-bottom: 0; }
+  .howitworks-objects__utp .value {
+    font-size: 150px; } }
+
+@media (min-width: 1024px) {
+  .howitworks-objects__text {
+    font-size: 16px;
+    line-height: 1.4; }
+  .howitworks-objects__utp .value {
+    font-size: 180px; }
+  .howitworks-objects__utp .label {
+    font-size: 16px;
+    line-height: 1.4; } }
+
+@media (min-width: 1200px) {
+  .howitworks-objects {
+    padding-top: 90px;
+    padding-bottom: 145px; }
+    .howitworks-objects__wrapper::before {
+      top: -425px;
+      right: -23px;
+      font-size: 528px; }
+    .howitworks-objects__title {
+      width: 400px;
+      -webkit-box-flex: 0;
+         -moz-box-flex: 0;
+          -ms-flex: 0 0 auto;
+              flex: 0 0 auto;
+      margin-bottom: 20px; }
+    .howitworks-objects__content {
+      width: 760px;
+      -webkit-box-flex: 0;
+         -moz-box-flex: 0;
+          -ms-flex: 0 0 auto;
+              flex: 0 0 auto; }
+    .howitworks-objects__column {
+      width: 360px;
+      -webkit-box-flex: 0;
+         -moz-box-flex: 0;
+          -ms-flex: 0 0 auto;
+              flex: 0 0 auto; }
+      .howitworks-objects__column:last-child {
+        width: 400px; }
+    .howitworks-objects__text {
+      padding-right: 50px;
+      margin-bottom: 50px; } }
+
+.howitworks-top {
+  overflow: hidden; }
+  .howitworks-top__title {
+    margin-bottom: 32px;
+    margin-top: -5px; }
+  .howitworks-top__steps {
+    position: relative;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 40px;
+    counter-reset: steps; }
+    .howitworks-top__steps::before {
+      content: '';
+      position: absolute;
+      width: 1px;
+      height: 150%;
+      bottom: 0;
+      left: 0;
+      background-color: #fed63f; }
+  .howitworks-top__step {
+    position: relative;
+    padding-left: 112px;
+    margin-bottom: 50px;
+    counter-increment: steps; }
+    .howitworks-top__step::before {
+      content: counter(steps);
+      position: absolute;
+      left: -13px;
+      top: -10px;
+      font-size: 24px;
+      font-weight: 600;
+      color: #fed63f; }
+  .howitworks-top__step-title {
+    margin-bottom: 12px;
+    font-size: 20px;
+    font-weight: 600; }
+  .howitworks-top__step-text {
+    margin: 0;
+    font-size: 14px;
+    line-height: 1.6; }
+  .howitworks-top__step-letter {
+    position: absolute;
+    left: 0;
+    top: -25px;
+    font-size: 125px;
+    color: transparent;
+    font-weight: 600;
+    -webkit-text-stroke: 0.7px #fed63f; }
+    .howitworks-top__step-letter--wide {
+      left: -11px; }
+
+@media (min-width: 768px) {
+  .howitworks-top {
+    padding-top: 115px; }
+    .howitworks-top__wrapper {
+      display: grid;
+      grid-template-columns: repeat(3, 33.3%);
+      grid-template-rows: repeat(2, auto); }
+    .howitworks-top__title {
+      grid-column: 1;
+      margin-bottom: 0; }
+    .howitworks-top__subtitle {
+      grid-column: 3;
+      margin-bottom: 75px; }
+    .howitworks-top__steps {
+      grid-column: 1 / 4;
+      grid-row: 2;
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: flex;
+      padding-top: 35px;
+      margin-bottom: 0; }
+      .howitworks-top__steps::before {
+        width: -webkit-calc(100% + 68px);
+        width: -moz-calc(100% + 68px);
+        width: calc(100% + 68px);
+        left: -34px;
+        top: 0;
+        height: 1px; }
+    .howitworks-top__step {
+      width: 33.3%;
+      -webkit-box-flex: 1;
+         -moz-box-flex: 1;
+          -ms-flex: 1 1 auto;
+              flex: 1 1 auto;
+      padding-left: 92px;
+      margin-bottom: 0; }
+      .howitworks-top__step::before {
+        left: 0px;
+        top: -58px; }
+    .howitworks-top__step-letter {
+      font-size: 105px;
+      top: -18px; }
+      .howitworks-top__step-letter--wide {
+        left: -9px; } }
+
+@media (min-width: 1024px) {
+  .howitworks-top__step {
+    padding-left: 112px; }
+  .howitworks-top__step-letter {
+    top: -25px;
+    font-size: 125px; }
+    .howitworks-top__step-letter--wide {
+      left: -11px; } }
+
+@media (min-width: 1200px) {
+  .howitworks-top__wrapper {
+    grid-template-columns: 400px 360px 400px; }
+  .howitworks-top__title {
+    margin-bottom: 75px; }
+  .howitworks-top__subtitle {
+    -ms-flex-item-align: center;
+        align-self: center;
+    margin-bottom: 75px; }
+  .howitworks-top__steps::before {
+    width: 200%;
+    left: -50%; }
+  .howitworks-top__step {
+    width: 400px;
+    -webkit-box-flex: 0;
+       -moz-box-flex: 0;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto; }
+    .howitworks-top__step:nth-child(2) {
+      width: 360px; } }
+
 .index-bottom {
   margin-top: 205px;
   padding-bottom: 65px;
@@ -5513,15 +5944,22 @@ th {
 
 @media (min-width: 768px) {
   .title {
-    font-size: 32px; } }
+    font-size: 32px; }
+    .title.small {
+      font-size: 26px; } }
 
 @media (min-width: 1024px) {
   .title {
-    font-size: 40px; } }
+    font-size: 40px; }
+    .title.small {
+      font-size: 30px; } }
 
 @media (min-width: 1200px) {
   .title {
-    font-size: 50px; } }
+    font-size: 50px;
+    line-height: 1.1; }
+    .title.small {
+      font-size: 34px; } }
 
 body {
   min-width: 320px;
@@ -5537,8 +5975,9 @@ body {
 
 .page {
   position: relative; }
-  .page > .lines {
-    top: 75px; }
+
+[theme='dark-theme'] .page > .lines {
+  top: 75px; }
 
 .tippy-popper {
   max-width: 270px; }
