--- a/develop/blocks/title/title.scss
+++ b/develop/blocks/title/title.scss
@@ -25,17 +25,31 @@
 @media #{$tablet} {
     .title {
         font-size: 32px;
+
+        &.small {
+            font-size: 26px;
+        }
     }
 }
 
 @media #{$laptop} {
     .title {
         font-size: 40px;
+
+        &.small {
+            font-size: 30px;
+        }
     }
 }
 
 @media #{$desktop} {
     .title {
         font-size: 50px;
+
+        line-height: 1.1;
+
+        &.small {
+            font-size: 34px;
+        }
     }
 }
