--- a/develop/blocks/project-input/project-input.pug
+++ b/develop/blocks/project-input/project-input.pug
@@ -2,4 +2,4 @@ mixin project-input(inputType, id, name, label, placeholder, mod)
     +b.project-input(class=mod)
         +e.LABEL.label(for=id)= label
         +e.INPUT.input(type=inputType id=id name=name placeholder=placeholder)&attributes(attributes)
-        block
+        +e.SPAN.error.error some text
