--- a/develop/blocks/project-decoration/project-decoration.scss
+++ b/develop/blocks/project-decoration/project-decoration.scss
@@ -75,6 +75,7 @@
 
 @media #{$desktop} {
     .project-decoration {
+        width: calc(100% - 120px);
         max-width: 1280px;
         margin-left: 60px;
 
