--- a/develop/blocks/project-input/project-input.scss
+++ b/develop/blocks/project-input/project-input.scss
@@ -2,6 +2,13 @@
     $this: &;
     position: relative;
 
+    &.error {
+        #{$this}__error {
+            opacity: 1;
+            pointer-events: all;
+        }
+    }
+
     &.small-padding {
         #{$this}__input {
             padding-right: 80px;
@@ -55,6 +62,20 @@
         font-size: 10px;
         color: #9e9e9e;
         line-height: 2;
+    }
+
+    &__error {
+        position: absolute;
+        width: 100%;
+        background-color: #fff;
+        color: red;
+        font-size: 10px;
+        line-height: 2;
+
+        opacity: 0;
+        pointer-events: none;
+
+        transition: opacity 300ms ease;
     }
 }
 
