--- a/develop/blocks/lines/lines.scss
+++ b/develop/blocks/lines/lines.scss
@@ -100,6 +100,13 @@
             }
         }
 
+        &.offset-right {
+            overflow: hidden;
+            &::after {
+                right: -40px;
+            }
+        }
+
         &.two-columns {
             .line {
                 width: 495px;
