modal + vacancies-page

--- a/develop/blocks/advantages/advantages.pug
+++ b/develop/blocks/advantages/advantages.pug
@@ -19,7 +19,7 @@ mixin advantages()
                 +e.title.--bottom
                     +title
                         | Ваши<br> инвестиции<br> защищены
-                    +e.BUTTON.appeal.btn Оставить заявку
+                    +e.BUTTON.appeal.btn.application-trigger Оставить заявку
                 +e.image
                     +e.image-positioner
                         +picture-helper({desktop: "images/redesign/advantages/umbrella.png", tablet: "images/redesign/advantages/umbrella.png", mobile: "images/redesign/advantages/umbrella_mobile.png"})
