--- a/develop/jade/template/footer.pug
+++ b/develop/jade/template/footer.pug
@@ -12,6 +12,7 @@ mixin doc-footer()
     script(src='libs/dropzone.js')
     script(src='libs/nouislider/nouislider.js')
     script(src='libs/nouislider/wNumb.js')
+    script(src='libs/micromodal.min.js')
     //- script(src='libs/stickyfill.min.js')
 
     //- script(src='libs/lazyload.js')
