--- a/develop/blocks/objects/objects.scss
+++ b/develop/blocks/objects/objects.scss
@@ -56,9 +56,9 @@
                 width: 12px;
                 height: 12px;
                 left: -15px;
-                top: 50%;
+                top: 9px;
 
-                transform: translateY(-45%) rotate(-45deg);
+                transform: rotate(-45deg);
 
                 border-width: 0 1px 1px 0;
                 border-style: solid;
