--- a/develop/jade/main-page.pug
+++ b/develop/jade/main-page.pug
@@ -19,4 +19,5 @@ html(lang='ru')
             +index-bottom
         +main-footer
             +lines
+        +application-modal
         +doc-footer
